// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Should be able pass to snapshot test 1`] = `
<button
  class="sc-bdfBQB kpyipP"
>
  Test
</button>
`;

exports[`Button Should render a danger version 1`] = `
<button
  class="sc-bdfBQB ieGLiv"
>
  Test
</button>
`;

exports[`Button Should render a disabled button 1`] = `
<button
  class="sc-bdfBQB GhTBJ"
  disabled=""
>
  Test
</button>
`;

exports[`Button Should render a secondary version 1`] = `
<button
  class="sc-bdfBQB ilYUMe"
>
  Test
</button>
`;

exports[`Button Should render a small size 1`] = `
<button
  class="sc-bdfBQB kpyipP"
>
  Test
</button>
`;
